<resources>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="email_1">Email</string>
    <string name="number">Number</string>
    <string name="update">Update</string>
    <string name="logout">LOGOUT</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="signin_to_start_earning">SignIn to start earning</string>
    <string name="welcome">Welcome</string>
    <string name="signup_and_start_earning">SignUp and start earning</string>
    <string name="full_name_register">Full name</string>
    <string name="email_register">Email</string>
    <string name="phone_no_register">Phone No</string>
    <string name="password_register">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="Gamoney">gamoney</string>
    <string name="earn_money_while_playing">Earn Money While Playing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tournaments">Tournaments</string>
    <string name="faq2">FAQ</string>
    <string name="policy">Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="support_us">Support Us</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <string name="rate_us_5_star_on_play_store">Rate Us 5 Star on Play Store</string>
    <string name="rate_us">Rate us</string>
    <string name="support_our_community">Support Our Community  </string>
    <string name="donate">Donate</string>
    <string name="gamoney">Gamoney</string>
    <string name="tell_us_about_your_problem">Tell us your problem</string>
    <string name="your_name">your name</string>
    <string name="your_email">your email</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send_message">send message</string>
    <string name="entry_price">Entry price:-</string>
    <string name="entry_price1">Entry price</string>
    <string name="description">Description:-</string>
    <string name="description1">Description</string>
    <string name="prize">Prize:-</string>
    <string name="prize1">Prize</string>
    <string name="time">Time:-</string>
    <string name="time1">Time</string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>
    <string name="tournament_image">Tournament Image</string>
    <string name="TestText">This is a Test Text</string>
    <string name="Generalrules">General Rules:-</string>
    <string name="Rules">1. Room id and password will be displayed 15 minutes before match on tournaments section.Players need to join room 10 minutes prior match.\n\n2. If you find any Hackers or cheaters, Please report them in app.\n\n3. No rematch in case of hackers or cheaters.\n\n4. Hackers will be permanently banned from the app and wont able to participate further.\n\n4. Rewards will be given on basis of rank and number of kills.Rewards will be credited same day after the match.\n\n5. Rewards are liable to change if there are less players.\n \n In case of any further queries or offers follow us on: \n \n</string>
    <string name="Emptyview">Sorry, No tournaments are available right now, Check again Later</string>
    <string name="player_1">PLAYER-1</string>
    <string name="player_2">PLAYER-2</string>
    <string name="player_3">PLAYER-3</string>
    <string name="player_4">PLAYER-4</string>
    <string name="NameWarning">*Please mention names correctly, wrong names will be \n \tdisqualified</string>
    <string name="please_enter_your_team_details">Please Enter Your team details</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number1">Phone Number:</string>
    <string name="this_number_will_be_used_for_prize_distribution">*This number will be used for Prize distribution</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="entry_fees">Entry Fees:-</string>
    <string name="earn_money_through_gaming">Earn Money Through gaming</string>
    <string name="player_5">PLAYER-5</string>
    <string name="name1">Name</string>
    <string name="email1">Email</string>
    <string name="subject1">Subject</string>
    <string name="message1">Message</string>
    <string name="join_tournament">Join Tournament</string>
    <string name="home1">Home</string>
    <string name="retry">Retry</string>
    <string name="csgo">CSGO</string>
    <string name="freefire">FREEFIRE</string>
    <string name="cod">COD</string>
    <string name="pubg">Pubg</string>
    <string name="tournament1">Tournament</string>
    <string name="chat1">Chat</string>
    <string name="faq1">FAQ</string>
    <string name="profile1">Profile</string>
    <string name="_500">500</string>
    <string name="rupee">₹</string>
    <string name="_05">05</string>
    <string name="september">September</string>
    <string name="map">Location</string>
    <string name="referencenumber">123456</string>
    <string name="hashtag">#</string>
    <string name="payment_successful">payment successful</string>
    <string name="tournament_poster">Tournament Poster</string>
    <string name="logo">Logo</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="captcha">Captcha</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="available_soon">Available Soon</string>
    <string name="room_id">Room ID :-</string>
    <string name="password3">Password :-</string>
    <string name="all_the_best">All The Best !</string>
    <string name="copy">Copy</string>
    <string name="reference_id">Reference ID:-</string>
    <string name="save_this_id_for_future_purpose">*Save this ID for Future Purpose</string>
    <string name="joined_tournaments">Joined Tournaments</string>
    <string name="payment_unsuccessful_n_nplease_try_again_later">Payment Unsuccessful \n\nPlease Try Again Later</string>
    <string name="total_matches">Total Matches</string>
    <string name="_0">0</string>
</resources>