<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgamoney"
    tools:context=".Paymentsuccesssfull">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamoney"
            android:id="@+id/topbar2"
            android:textColor="#fff"
            android:fontFamily="@font/bungee"
            android:textSize="29sp"
            android:layout_marginStart="130dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grentick"
            android:layout_below="@+id/topbar2"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/payment_successful"
            android:src="@drawable/tick" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grentick"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bungee"
            android:text="@string/all_the_best"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:id="@+id/text11"
            android:text="@string/reference_id"
            android:textStyle="bold"
            android:fontFamily="@font/bungee"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_marginTop="10sp"
            android:layout_marginStart="70sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#fff"
            android:text="@string/referencenumber"
            android:layout_marginTop="17sp"
            android:layout_below="@+id/text1"
            android:layout_marginStart="263dp"
            android:id="@+id/referencenumber"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="25sp"
            android:text="@string/hashtag"
            android:layout_below="@+id/text1"
            android:layout_marginTop="17dp"
            android:layout_marginStart="250dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_below="@+id/text11"
            android:fontFamily="@font/antic"
            android:id="@+id/reference"
            android:layout_marginTop="-5dp"
            android:textColor="#fff"
            android:text="@string/save_this_id_for_future_purpose"
            android:textSize="15sp" />

        <Button
            android:id="@+id/Jointournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_below="@+id/reference"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundedcorner"
            android:text="@string/joined_tournaments"
            android:textColor="#FFF"
            android:textSize="18sp"
             />

        <TextView
            android:id="@+id/Backtohome2"
            android:layout_below="@+id/Jointournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="140dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/home1"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/bungee"
            android:textSize="25sp" />

    </RelativeLayout>

</ScrollView>