<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgamoney"
    tools:context=".CsgoDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tournamenttext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/bungee"
            android:text="@string/tournaments"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_recycler3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/tournamenttext3"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/tournament_poster"/>

        <TextView
            android:id="@+id/price3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_recycler3"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bungee"
            android:text="@string/entry_fees"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/priceinput3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_recycler3"
            android:layout_marginStart="170dp"
            android:layout_marginTop="21.5dp"
            android:text="@string/TestText"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/image_description3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price3"
            android:layout_marginStart="18dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/antic"
            android:text="@string/TestText"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/generalrule3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_description3"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/bungee"
            android:text="@string/Generalrules"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rules3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/generalrule3"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/antic"
            android:text="@string/Rules"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/instagram3"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_below="@id/rules3"
            android:layout_marginStart="160dp"
            android:layout_marginTop="-35dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram"/>

        <ImageView
            android:id="@+id/facebook3"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_below="@id/rules3"
            android:layout_marginStart="190dp"
            android:layout_marginTop="-35dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook"/>

        <Button
            android:id="@+id/jointournament3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/facebook3"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedcorner"
            android:fontFamily="@font/bungee"
            android:text="@string/join_tournament"
            android:textColor="#FFF"
            android:textSize="13sp"
            app:cornerRadius="400dp" />

    </RelativeLayout>

</ScrollView>