<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodAfterdes"
    android:background="@drawable/backgroundgamoney">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tournamenttext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/bungee"
            android:text="@string/tournaments"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/teamdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tournamenttext1"
            android:layout_marginStart="80dp"
            android:text="@string/please_enter_your_team_details"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teamdetails"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/player_1"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player1input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1"
            android:layout_marginStart="15dp"
            android:hint="@string/player_1"
            android:textColorHint="#fff"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1input1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/player_2"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player1input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player2"
            android:layout_marginStart="15dp"
            android:hint="@string/player_2"
            android:textColorHint="#fff"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/player3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1input2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/player_3"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player1input3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player3"
            android:layout_marginStart="15dp"
            android:hint="@string/player_3"
            android:textColorHint="#fff"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/player4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1input3"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/player_4"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player1input4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player4"
            android:layout_marginStart="15dp"
            android:hint="@string/player_4"
            android:textColorHint="#fff"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1input4"
            android:layout_marginStart="18dp"
            android:text="@string/NameWarning"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/PhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/warning"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PhoneNo"
            android:layout_marginStart="15dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textColorHint="#fff"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/warning1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneinput"
            android:layout_marginStart="18dp"
            android:text="@string/this_number_will_be_used_for_prize_distribution"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/warning1"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/proceed_to_payment"
            android:background="@drawable/smallbutons"
            android:textColor="#fff"/>

    </RelativeLayout>

</ScrollView>